# ToDoList

./: CMakeLists.txt  Task.cpp  Task.h  TaskCollection.cpp  TaskCollection.h  TaskDisplayer.cpp  TaskDisplayer.h  TaskList.cpp  TaskList.h  date.h  main.cpp
test/: CMakeLists.txt  TestTaskList.cpp  countFixtureCollection.cpp  countFixtureList.cpp  removeFixtureCollection.cpp  removeFixtureList.cpp
